--- a/EcoApp/Scenes/HabitList/HabitListViewController.storyboard
+++ b/EcoApp/Scenes/HabitList/HabitListViewController.storyboard
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6tP-KK-weG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kO5-lp-j4i">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,13 +17,102 @@
                     <view key="view" contentMode="scaleToFill" id="Ip3-9F-cK3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fFO-2r-PCF">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Hnm-NH-nYc">
+                                    <size key="itemSize" width="375" height="327"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HabbitCell" id="75f-jt-gG8" customClass="HabbitCell" customModule="EcoApp" customModuleProvider="target">
+                                        <rect key="frame" x="19.5" y="0.0" width="375" height="327"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vfM-M5-VGd">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="327"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="inu-n7-A8F">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="327"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSz-li-kG9">
+                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3MQ-b6-3d3">
+                                                            <rect key="frame" x="0.0" y="25" width="375" height="302"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="inu-n7-A8F" secondAttribute="trailing" id="8b2-Y4-moS"/>
+                                                <constraint firstItem="inu-n7-A8F" firstAttribute="top" secondItem="vfM-M5-VGd" secondAttribute="top" id="jg5-zJ-ojX"/>
+                                                <constraint firstItem="inu-n7-A8F" firstAttribute="leading" secondItem="vfM-M5-VGd" secondAttribute="leading" id="vho-Kp-OiW"/>
+                                                <constraint firstAttribute="bottom" secondItem="inu-n7-A8F" secondAttribute="bottom" id="zhL-9k-fsn"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="375" height="327"/>
+                                        <connections>
+                                            <outlet property="photoImageView" destination="3MQ-b6-3d3" id="Ylu-aM-Mnm"/>
+                                            <outlet property="titleLabel" destination="zSz-li-kG9" id="cuv-Ly-Tn7"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="bTM-dY-7hI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fFO-2r-PCF" firstAttribute="top" secondItem="bTM-dY-7hI" secondAttribute="top" id="MqQ-Ad-hpd"/>
+                            <constraint firstItem="bTM-dY-7hI" firstAttribute="trailing" secondItem="fFO-2r-PCF" secondAttribute="trailing" id="gmr-dk-60k"/>
+                            <constraint firstItem="fFO-2r-PCF" firstAttribute="leading" secondItem="bTM-dY-7hI" secondAttribute="leading" id="t9C-y9-cxp"/>
+                            <constraint firstItem="bTM-dY-7hI" firstAttribute="bottom" secondItem="fFO-2r-PCF" secondAttribute="bottom" id="wu2-5A-TRH"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="dvY-0E-dmt">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="dnS-VJ-8oa">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Ui2-J6-zgQ">
+                                <rect key="frame" x="302" y="7" width="92" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Аккаунт"/>
+                                <connections>
+                                    <action selector="logout" destination="6tP-KK-weG" eventType="touchUpInside" id="jvq-7S-0Uq"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="accountButton" destination="Ui2-J6-zgQ" id="7Pj-4Y-FeY"/>
+                        <outlet property="collectionView" destination="fFO-2r-PCF" id="eIv-F7-KPw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i6k-9m-0wJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="178" y="110"/>
+            <point key="canvasLocation" x="1086.9565217391305" y="109.82142857142857"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8Pd-OQ-l4j">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kO5-lp-j4i" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9JA-Nw-aGC">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6tP-KK-weG" kind="relationship" relationship="rootViewController" id="Rlc-4L-O8G"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8do-Z4-n4H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="176.81159420289856" y="109.82142857142857"/>
         </scene>
     </scenes>
     <resources>
