--- a/EcoApp/Scenes/HabitList/HabitListViewController.storyboard
+++ b/EcoApp/Scenes/HabitList/HabitListViewController.storyboard
@@ -13,7 +13,6 @@
         <!--Habit List View Controller-->
         <scene sceneID="Me6-sq-l64">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="i6k-9m-0wJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="HabitListViewController" id="6tP-KK-weG" customClass="HabitListViewController" customModule="EcoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ip3-9F-cK3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -23,46 +22,87 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Hnm-NH-nYc">
-                                    <size key="itemSize" width="375" height="327"/>
+                                    <size key="itemSize" width="250" height="181"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HabbitCell" id="75f-jt-gG8" customClass="HabbitCell" customModule="EcoApp" customModuleProvider="target">
-                                        <rect key="frame" x="19.5" y="0.0" width="375" height="327"/>
+                                        <rect key="frame" x="82" y="0.0" width="250" height="181"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vfM-M5-VGd">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="327"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="250" height="181"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="inu-n7-A8F">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="327"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="181"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="rUi-KT-GYz">
-                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jED-oG-YUw">
+                                                            <rect key="frame" x="0.0" y="0.0" width="250" height="64"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSz-li-kG9">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="48" height="40"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z1U-ZQ-7i9">
-                                                                    <rect key="frame" x="49" y="0.0" width="326" height="40"/>
-                                                                    <state key="normal" title="Like"/>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3MQ-b6-3d3">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="64"/>
+                                                                </imageView>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z1U-ZQ-7i9">
+                                                                    <rect key="frame" x="210" y="0.0" width="40" height="40"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="40" id="san-vW-dVh"/>
+                                                                        <constraint firstAttribute="width" constant="40" id="xMW-aY-BxN"/>
+                                                                    </constraints>
+                                                                    <state key="normal" image="heart" catalog="system"/>
                                                                     <connections>
                                                                         <action selector="likeTouched" destination="75f-jt-gG8" eventType="touchUpInside" id="D3c-df-fhQ"/>
                                                                     </connections>
                                                                 </button>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7QK-RX-0JU">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="40" id="25E-gC-zz9"/>
+                                                                        <constraint firstAttribute="width" constant="40" id="9lz-zA-xLe"/>
+                                                                    </constraints>
+                                                                    <state key="normal" image="plus" catalog="system"/>
+                                                                    <connections>
+                                                                        <action selector="addTouched" destination="75f-jt-gG8" eventType="touchUpInside" id="ajv-Ex-X7Q"/>
+                                                                    </connections>
+                                                                </button>
                                                             </subviews>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="40" id="Aq8-2G-L7o"/>
+                                                                <constraint firstAttribute="trailing" secondItem="3MQ-b6-3d3" secondAttribute="trailing" id="0W6-Vv-ncZ"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Z1U-ZQ-7i9" secondAttribute="trailing" id="BZH-vd-gF1"/>
+                                                                <constraint firstAttribute="height" constant="64" id="MSq-rk-J9V"/>
+                                                                <constraint firstItem="7QK-RX-0JU" firstAttribute="top" secondItem="jED-oG-YUw" secondAttribute="top" id="WQd-9Q-o4d"/>
+                                                                <constraint firstItem="3MQ-b6-3d3" firstAttribute="top" secondItem="jED-oG-YUw" secondAttribute="top" id="Wxo-uQ-CIc"/>
+                                                                <constraint firstItem="7QK-RX-0JU" firstAttribute="leading" secondItem="jED-oG-YUw" secondAttribute="leading" id="a2N-ay-JkV"/>
+                                                                <constraint firstItem="Z1U-ZQ-7i9" firstAttribute="top" secondItem="jED-oG-YUw" secondAttribute="top" id="j7a-el-INI"/>
+                                                                <constraint firstAttribute="bottom" secondItem="3MQ-b6-3d3" secondAttribute="bottom" id="lvG-38-YVx"/>
+                                                                <constraint firstItem="3MQ-b6-3d3" firstAttribute="leading" secondItem="jED-oG-YUw" secondAttribute="leading" id="pCD-fF-YC7"/>
                                                             </constraints>
+                                                        </view>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSz-li-kG9" userLabel="Название привычки">
+                                                            <rect key="frame" x="0.0" y="65" width="250" height="99"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="36" translatesAutoresizingMaskIntoConstraints="NO" id="N3e-ZW-w3z">
+                                                            <rect key="frame" x="0.0" y="165" width="250" height="16"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="htT-aW-oP5">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="107" height="16"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GCB-lk-h0Q">
+                                                                    <rect key="frame" x="143" y="0.0" width="107" height="16"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
                                                         </stackView>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3MQ-b6-3d3">
-                                                            <rect key="frame" x="0.0" y="41" width="375" height="286"/>
-                                                        </imageView>
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
@@ -73,10 +113,15 @@
                                                 <constraint firstAttribute="bottom" secondItem="inu-n7-A8F" secondAttribute="bottom" id="zhL-9k-fsn"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="375" height="327"/>
+                                        <size key="customSize" width="250" height="181"/>
                                         <connections>
+                                            <outlet property="categoryLabel" destination="htT-aW-oP5" id="hXB-x0-5wg"/>
+                                            <outlet property="likeButton" destination="Z1U-ZQ-7i9" id="I6f-cj-lHB"/>
+                                            <outlet property="mainStackView" destination="inu-n7-A8F" id="ERV-dH-d6X"/>
                                             <outlet property="photoImageView" destination="3MQ-b6-3d3" id="Ylu-aM-Mnm"/>
+                                            <outlet property="pointsLabel" destination="GCB-lk-h0Q" id="GrV-ay-B5H"/>
                                             <outlet property="titleLabel" destination="zSz-li-kG9" id="cuv-Ly-Tn7"/>
+                                            <outlet property="topParentView" destination="jED-oG-YUw" id="rTd-tM-5tT"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -108,6 +153,7 @@
                         <outlet property="collectionView" destination="fFO-2r-PCF" id="eIv-F7-KPw"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i6k-9m-0wJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1086.9565217391305" y="109.82142857142857"/>
         </scene>
@@ -131,6 +177,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
